Update: ore analyzer now displays melting temp of materials

--- a/Content.Client/OreAnalyzer/UI/OreAnalyzerWindow.xaml
+++ b/Content.Client/OreAnalyzer/UI/OreAnalyzerWindow.xaml
@@ -6,5 +6,7 @@
             Name="OreMaterials"/>
         <Label
             Name="OreReagents"/>
+        <Label
+            Name="OreMeltingPoint"/>
     </BoxContainer>
 </DefaultWindow>
